syntax = "proto3";
package hyperlane.warp.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/warp/types";

import "hyperlane/warp/v1/types.proto";
import "google/api/annotations.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

// Msg defines the module Msg service.
service Query {
  // Params returns the module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/hyperlane/warp/v1/params";
  }

  // Tokens ...
  rpc Tokens(QueryTokensRequest) returns (QueryTokensResponse) {
    option (google.api.http).get = "/hyperlane/v1/tokens";
  }

  // Token ...
  rpc Token(QueryTokenRequest) returns (QueryTokenResponse) {
    option (google.api.http).get = "/hyperlane/v1/tokens/{id}";
  }

  // BridgedSupply ...
  rpc BridgedSupply(QueryBridgedSupplyRequest)
      returns (QueryBridgedSupplyResponse) {
    option (google.api.http).get = "/hyperlane/v1/tokens/{id}/bridged_supply";
  }

  // RemoteRouters ...
  rpc RemoteRouters(QueryRemoteRoutersRequest)
      returns (QueryRemoteRoutersResponse) {
    option (google.api.http).get = "/hyperlane/v1/tokens/{id}/remote_routers";
  }

  // QuoteRemoteTransfer ...
  rpc QuoteRemoteTransfer(QueryQuoteRemoteTransferRequest)
      returns (QueryQuoteRemoteTransferResponse) {
    option (google.api.http).get =
        "/hyperlane/v1/tokens/{id}/quote_remote_transfer/{destination_domain}";
  }
}

// QueryTokensRequest ...
message QueryTokensRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryTokensResponse {
  // params defines the parameters of the module.
  repeated QueryTokenResponse tokens = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// QueryTokenRequest ...
message QueryTokenRequest { string id = 1; }

// QueryTokenResponse ...
message QueryTokenResponse {
  string id = 1;
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  HypTokenType token_type = 3;

  string origin_mailbox = 4;
  string origin_denom = 5;

  string ism_id = 7;

  repeated RemoteRouter remote_routers = 6;
}

// QueryBridgedSupplyRequest ...
message QueryBridgedSupplyRequest { string id = 1; }

// QueryBridgedSupplyResponse ...
message QueryBridgedSupplyResponse { string bridged_supply = 1; }

// QueryRemoteRoutersRequest ...
message QueryRemoteRoutersRequest { string id = 1; }

// QueryRemoteRoutersResponse ...
message QueryRemoteRoutersResponse { repeated RemoteRouter remote_routers = 6; }

// QueryQuoteRemoteTransferRequest ...
message QueryQuoteRemoteTransferRequest {
  string id = 1;
  string destination_domain = 2;
}

// QueryQuoteRemoteTransferResponse ...
message QueryQuoteRemoteTransferResponse {
  repeated cosmos.base.v1beta1.Coin gas_payment = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
